--- a/digital-portfolio2/index.html
+++ b/digital-portfolio2/index.html
@@ -72,7 +72,7 @@
     <body>
         <header>
             <div class="header-content">
-            <img src="digital-portfolio-/digital-portfolio2 /saranya.jpeg" class="profile-picture">
+            <img src="/digital-portfolio-/digital-portfolio2/saranya.jpeg" class="profile-picture">
             <h1> Saranya R</h1>
             </div>
         </header>
